# django-payment-midtrans

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  docs.md  pyproject.toml
django_midtrans/: __init__.py  admin.py  app_settings.py  apps.py  client.py  constants.py  exceptions.py  models.py  notification.py  schedules.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
django_midtrans/migrations/: 0001_initial.py  __init__.py
docs/: admin.md  celery.md  changelog.md  conf.py  configuration.md  index.rst  installation.md  payments.md  production.md  quickstart.md  signals.md  webhooks.md
docs/api/: client.md  client.rst  constants.md  constants.rst  exceptions.md  exceptions.rst  models.md  models.rst  serializers.md  serializers.rst  services.md  services.rst  signals.md  signals.rst  tasks.md  tasks.rst  views.md  views.rst
docs/example/: index.md  setup.md  walkthrough.md
example/config/: celery.py  settings.py  urls.py  wsgi.py
example/shop/: admin.py  apps.py  context_processors.py  dashboard.py  models.py  signals.py  urls.py  views.py
example/shop/migrations/: 0001_initial.py
example/templates/: base.html
example/templates/admin/: index.html
example/templates/shop/: cart.html  checkout.html  home.html  order_detail.html  orders.html  payment_finish.html  payment_status.html
